feature/upload-widget-video - asset bug fixed

--- a/Example/Cloudinary/Info.plist
+++ b/Example/Cloudinary/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>pls let me access to photo library</string>
+	<string>The app needs access to the photo library in order for you to choose photos and videos for uploading</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
